intel/bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/log.txt
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:26:17: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         return NULL;
                ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:30:34: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if (*str < 0xc2) return NULL;
                                 ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:32:44: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:35:71: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if (*str == 0xe0 && (str[1] < 0xa0 || str[1] > 0xbf)) return NULL;
                                                                      ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:36:52: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if (*str == 0xed && str[1] > 0x9f) return NULL; // str[1] < 0x80 is checked below
                                                   ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:38:44: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:40:44: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:43:34: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if (*str > 0xf4) return NULL;
                                 ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:44:71: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if (*str == 0xf0 && (str[1] < 0x90 || str[1] > 0xbf)) return NULL;
                                                                      ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:45:52: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if (*str == 0xf4 && str[1] > 0x8f) return NULL; // str[1] < 0x80 is checked below
                                                   ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:47:44: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:49:44: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:51:44: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if ((*str & 0xc0) != 0x80) return NULL;
                                           ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:54:49: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         if ((c & 0xFFFFF800) == 0xD800) return NULL;
                                                ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:57:35: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
            if (i + 2 > n) return NULL;
                                  ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:62:17: error: cannot initialize return object of type 'stb__wchar *' (aka 'int *') with an rvalue of type 'void *'
         return NULL;
                ^~~~
bench_214/extr_.stbtools..stb.h_stb_from_utf8_with_main/extr_.stbtools..stb.h_stb_from_utf8_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
17 errors generated.
HLS FPGA Parse FAILED.
